--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1 class="heading">Stone Paper Scissors</h1>
     <div class="image-container">
         <div class="choices" id="stone">
-           <img src="images/rock.png">
+           <img src="images/rock.webp">
         </div>
         <div class="choices" id="paper">
-           <img src="images/paper.png">
+           <img src="images/paper.webp">
         </div>
         <div class="choices" id="scissors">
-          <img src="images/scissors.png">
+          <img src="images/scissors.webp">
         </div>
     </div>
 
